tar xJvf added yo extract source

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -240,7 +240,7 @@ jobs:
           
           # Extract source
           echo "Extracting Zig source..."
-          tar -xzvf zig-source.tar.xz
+          tar -xJvf zig-source.tar.xz
           if [ ! -d "zig-$ZIG_VERSION" ]; then
             echo "Error: Extraction failed - directory zig-$ZIG_VERSION not found"
             ls -la
