--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -414,7 +414,7 @@ jobs:
             -DCMAKE_C_COMPILER=gcc \
             -DCMAKE_CXX_COMPILER=g++ \
             -DCMAKE_C_FLAGS="-O2 -DNDEBUG -flto=auto" \
-            -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG -flto=auto"   
+            -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG -flto=auto" \ 
             -DCMAKE_EXE_LINKER_FLAGS="-flto=auto" \
             -DCMAKE_SHARED_LINKER_FLAGS="-flto=auto" \
             -DCMAKE_MODULE_LINKER_FLAGS="-flto=auto" \
