--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -422,25 +422,25 @@ jobs:
           
           # Configure with CMake using explicit command
           echo "Configuring with CMake..."
-          MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="" \
+          MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
           /mingw64/bin/cmake.exe .. -G Ninja \
             -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
             -DCMAKE_CXX_COMPILER=/mingw64/bin/g++.exe \
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_INSTALL_PREFIX="$MINGW_PREFIX" \
             -DCMAKE_PREFIX_PATH="/mingw64" \
-            -DCMAKE_C_FLAGS="-O2 -DNDEBUG \
-            -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG \
+            -DCMAKE_C_FLAGS="-O2 -DNDEBUG" \
+            -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG" \
             -DCMAKE_AR=/mingw64/bin/ar.exe \
             -DCMAKE_RANLIB=/mingw64/bin/ranlib.exe \
             -DCMAKE_LINKER=/mingw64/bin/ld.exe \
-            -DLLVM_DIR=/mingw64/lib/cmake/llvm \         
+            -DLLVM_DIR=/mingw64/lib/cmake/llvm \     
             -DLLVM_ENABLE_RTTI=ON \
             -DZIG_HAVE_LLVM=ON \
             -DZIG_ENABLE_LOGGING=OFF \
             -DZIG_SKIP_NON_NATIVE=ON \
             -DZIG_ENABLE_LINK_SNAPSHOTS=OFF \
-            -DZIG_TARGET_TRIPLE=x86_64-windows-gnu \                               
+            -DZIG_TARGET_TRIPLE=x86_64-windows-gnu \                            
             -DZIG_STATIC_LLVM=OFF \
             -DZIG_SHARED_LLVM=ON \
             -DZIG_VERSION="$ZIG_VERSION" \
