fix: Correct CMake command syntax in optimization step - Fix broken CMake command that was being interpreted as separate commands - Add proper MSYS2_ARG_CONV_EXCL environment variable handling - Maintain CMake flag formatting for ZIG_VERBOSE and ZIG_ENABLE_TESTS - Ensure optimization settings are properly applied before build - Resolve 'command not found' error for CMake flags

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -477,7 +477,8 @@ jobs:
           echo "Optimizing build for Windows runner memory limits..."
           
           # Reduce memory usage by disabling unnecessary features
-          $CMAKE_CMD -DZIG_VERBOSE=OFF -DZIG_ENABLE_TESTS=OFF .
+          MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+          $CMAKE_CMD . -DZIG_VERBOSE=OFF -DZIG_ENABLE_TESTS=OFF
           
           # Clean up any previous build artifacts to save space
           find . -name "*.o" -delete 2>/dev/null || true
