fix(build): correct CMake command invocation in build script
The build script failed with './: Is a directory' because the CMake command
was called incorrectly from the build directory. Replaced the erroneous './'
argument with the correct '-B . -S ..' flags to explicitly specify the
build and source directories.
This ensures the build can proceed after the successful configuration stage.
The unrelated CMake warnings about unused variables are benign and do not
affect the build.

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -423,6 +423,7 @@ jobs:
           # Configure with CMake using explicit command
           echo "Configuring with CMake..."
           MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+          $CMAKE_CMD -B . -S .. -DZIG_VERBOSE=OFF -DZIG_ENABLE_TESTS=OFF \
           /mingw64/bin/cmake.exe .. -G Ninja \
             -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
             -DCMAKE_CXX_COMPILER=/mingw64/bin/g++.exe \
