--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -400,6 +400,7 @@ jobs:
         shell: bash
         run: |
           echo "=== Build Failure Diagnosis ==="
+          echo "Current directory: $(pwd)"
           cd zig-source/build  # ← ADD THIS LINE
           echo "Current directory: $(pwd)"
           echo "Last 50 lines of build log:"
