--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -327,10 +327,6 @@ jobs:
             -DCMAKE_AR=/mingw64/bin/ar.exe \
             -DCMAKE_RANLIB=/mingw64/bin/ranlib.exe \
             -DCMAKE_LINKER=/mingw64/bin/ld.exe \
-            -DZIG_HAVE_LLVM=ON \
-            -DZIG_ENABLE_LOGGING=OFF \
-            -DZIG_SKIP_NON_NATIVE=ON \
-            -DZIG_ENABLE_LINK_SNAPSHOTS=OFF \
             -DZIG_TARGET_TRIPLE=x86_64-windows-gnu \
             -DZIG_STATIC_LLVM=OFF \
             -DZIG_SHARED_LLVM=ON \
@@ -376,27 +372,25 @@ jobs:
           echo "Build optimized for memory constraints"
           echo "Building with $BUILD_JOBS parallel jobs for better performance..."
           cd zig-source/build  # ← ADDED THIS LINE 
-           # Build with timeout and fallback
-          #timeout 15m $NINJA_CMD -j$BUILD_JOBS 2>&1 | tee cmake-build.log
-          timeout 15m /mingw64/bin/ninja.exe -j$BUILD_JOBS 2>&1 | tee cmake-build.log
-          
-        
-          if [ $? -eq 124 ]; then
-             echo "Build timed out after 15 minutes - trying single-threaded..."
-              #timeout 10m $NINJA_CMD -j1 2>&1 | tee cmake-build-timeout.log
-              timeout 10m /mingw64/bin/ninja.exe -j1 2>&1 | tee cmake-build-timeout.log
-          fi
-            
-          if [ $? -ne 0 ]; then
-          echo "Ninja build failed. Last 100 lines of log:"
-          # Try to show log if it exists
-          [ -f "cmake-build.log" ] && tail -100 cmake-build.log
-          echo "Build directory contents:"
-          ls -la
-          exit 1
+          # Build with timeout for single-threaded compilation
+          echo "Starting single-threaded build (this will take time)..."
+          timeout 45m /mingw64/bin/ninja.exe -j1 2>&1 | tee cmake-build.log
+
+          # Check the exit status of the timeout/ninja command
+          build_exit_code=$?
+              
+          if [ $build_exit_code -eq 124 ]; then
+              echo "ERROR: Build timed out after 45 minutes. Increase the timeout or investigate hang."
+              exit 1
+          elif [ $build_exit_code -ne 0 ]; then
+              echo "Ninja build failed. Last 100 lines of log:"
+              # Try to show log if it exists
+              [ -f "cmake-build.log" ] && tail -100 cmake-build.log
+              echo "Build directory contents:"
+              ls -la
+              exit 1
           fi              
-    
-          echo "Build completed successfully!" ! Progessing for Stage 2
+              echo "Build completed successfully! Progressing to Stage 2"
 
       - name: Diagnose build failure
         if: failure()
